Use black for resize gutter in tab fullscreen mode.

This avoids the possibility of flashing white in the gutter area, which
is more obtrusive than flashing black.

BUG=602991,607415

Review-Url: https://codereview.chromium.org/1884043002
Cr-Commit-Position: refs/heads/master@{#393112}

Former-commit-id: 41663d972e8f55b6f2876eb59329c41465157b7e