content/browser/renderer_host/render_widget_host_view_aura.h
@@ -434,6 +434,7 @@ class CONTENT_EXPORT RenderWidgetHostViewAura
   // DelegatedFrameHostClient implementation.
   ui::Layer* DelegatedFrameHostGetLayer() const override;
   bool DelegatedFrameHostIsVisible() const override;
+  SkColor DelegatedFrameHostGetGutterColor(SkColor color) const override;
   gfx::Size DelegatedFrameHostDesiredSizeInDIP() const override;
   bool DelegatedFrameCanCreateResizeLock() const override;
   std::unique_ptr<ResizeLock> DelegatedFrameHostCreateResizeLock(
